Some more java 8 refactoring of FoodTruckStopService